// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Menu API for Menu 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 5px 0;
}

<Menu>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Menu-sc-1eizce1-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
            [Function],
            ";
  overflow: hidden;
",
            "
  display: inline-flex;
  flex-direction: column;
  padding: 5px 0;
",
          ],
        },
        "displayName": "Menu",
        "render": [Function],
        "styledComponentId": "Menu-sc-1eizce1-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      Children
    </div>
  </StyledComponent>
</Menu>
`;

exports[`Storyshots Menu Fixed width 1`] = `
.c4 {
  margin: 0;
  font-size: 1rem;
}

.c5 {
  margin: 0;
  font-size: 1rem;
  color: #F5364E;
}

.c8 > *:nth-child(2) .c3 {
  margin-top: 5px;
}

.c6 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  color: rgb(0,151,208);
}

.c6:active {
  color: rgb(0,144,198);
}

.c7 {
  font-weight: bold;
}

.c2 {
  margin: 0;
  font-weight: normal;
  font-size: 2.46rem;
}

.c9 > .c3 {
  margin-top: 5px;
}

.c10 > .c3 {
  margin-top: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: #353630;
  min-height: 32px;
}

.c1 * {
  -webkit-transition: initial;
  transition: initial;
}

.c1:hover {
  background-color: #00A1DE;
  color: #FFFFFF;
}

.c1:hover * {
  color: #FFFFFF;
}

.c1:active {
  background-color: rgb(0,151,208);
  color: #FFFFFF;
}

.c1:active * {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 5px 0;
  width: 300px;
}

<Menuexample__StyledMenu>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Menuexample__StyledMenu-sc-10gs01o-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
            [Function],
            ";
  overflow: hidden;
",
            "
  display: inline-flex;
  flex-direction: column;
  padding: 5px 0;
",
            "
  width: 300px;
",
          ],
        },
        "displayName": "Menuexample__StyledMenu",
        "render": [Function],
        "styledComponentId": "Menuexample__StyledMenu-sc-10gs01o-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            MenuItem 1
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            MenuItem Content 2
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <Heading
              level={1}
            >
              <StyledComponent
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "Heading-sc-1ol6ekh-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        "
  margin: 0;
  font-weight: normal;
  font-size: ",
                        [Function],
                        ";
  ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "level": 1,
                    },
                    "displayName": "Heading",
                    "propTypes": Object {
                      "color": [Function],
                      "level": [Function],
                    },
                    "render": [Function],
                    "styledComponentId": "Heading-sc-1ol6ekh-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                    Symbol(Symbol.hasInstance): [Function],
                  }
                }
                forwardedRef={null}
                level={1}
              >
                <BaseComponent
                  className="c2"
                  level={1}
                >
                  <h1
                    className="c2"
                  >
                    MenuItem Heading 1
                  </h1>
                </BaseComponent>
              </StyledComponent>
            </Heading>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <P>
              <StyledComponent
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "c3",
                      "isStatic": false,
                      "lastClassName": "c5",
                      "rules": Array [
                        "
  margin: 0;
  font-size: ",
                        [Function],
                        ";

  ",
                        [Function],
                        ";
",
                      ],
                    },
                    "displayName": "P",
                    "propTypes": Object {
                      "color": [Function],
                    },
                    "render": [Function],
                    "styledComponentId": "c3",
                    "target": "p",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <p
                  className="c3 c4"
                >
                  MenuItem P
                </p>
              </StyledComponent>
            </P>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <P
              color="error"
            >
              <StyledComponent
                color="error"
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "c3",
                      "isStatic": false,
                      "lastClassName": "c5",
                      "rules": Array [
                        "
  margin: 0;
  font-size: ",
                        [Function],
                        ";

  ",
                        [Function],
                        ";
",
                      ],
                    },
                    "displayName": "P",
                    "propTypes": Object {
                      "color": [Function],
                    },
                    "render": [Function],
                    "styledComponentId": "c3",
                    "target": "p",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <p
                  className="c3 c5"
                  color="error"
                >
                  MenuItem P error
                </p>
              </StyledComponent>
            </P>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <A
              color="primary"
            >
              <StyledComponent
                color="primary"
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "A-sc-1bkdbcq-0",
                      "isStatic": false,
                      "lastClassName": "c6",
                      "rules": Array [
                        "
  color: ",
                        [Function],
                        ";
  transition: color cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  cursor: pointer;
  text-decoration: none;
  &:hover {
    color: ",
                        [Function],
                        ";
  }
  &:active {
    color: ",
                        [Function],
                        ";
  }
",
                      ],
                    },
                    "defaultProps": Object {
                      "color": "primary",
                    },
                    "displayName": "A",
                    "propTypes": Object {
                      "color": [Function],
                    },
                    "render": [Function],
                    "styledComponentId": "A-sc-1bkdbcq-0",
                    "target": "a",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <a
                  className="c6"
                  color="primary"
                >
                  MenuItem A
                </a>
              </StyledComponent>
            </A>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <B>
              <StyledComponent
                forwardedClass={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": undefined,
                    "componentStyle": ComponentStyle {
                      "componentId": "B-sc-1ocntpk-0",
                      "isStatic": true,
                      "lastClassName": "c7",
                      "rules": Array [
                        "
  font-weight: bold;
",
                      ],
                    },
                    "displayName": "B",
                    "render": [Function],
                    "styledComponentId": "B-sc-1ocntpk-0",
                    "target": "b",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <b
                  className="c7"
                >
                  MenuItem B
                </b>
              </StyledComponent>
            </B>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            <IconDelete>
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                />
              </svg>
            </IconDelete>
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        as="a"
      >
        <StyledComponent
          active={false}
          as="a"
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <a
            className="c1"
          >
            &lt;a&gt;
             Tag
          </a>
        </StyledComponent>
      </MenuItem>
    </div>
  </StyledComponent>
</Menuexample__StyledMenu>
`;

exports[`Storyshots Menu Min width 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 5px 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: #353630;
  min-height: 32px;
}

.c1 * {
  -webkit-transition: initial;
  transition: initial;
}

.c1:hover {
  background-color: #00A1DE;
  color: #FFFFFF;
}

.c1:hover * {
  color: #FFFFFF;
}

.c1:active {
  background-color: rgb(0,151,208);
  color: #FFFFFF;
}

.c1:active * {
  color: #FFFFFF;
}

<Menu>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Menu-sc-1eizce1-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  border-radius: 3px;
  background-color: ",
            [Function],
            ";
  overflow: hidden;
",
            "
  display: inline-flex;
  flex-direction: column;
  padding: 5px 0;
",
          ],
        },
        "displayName": "Menu",
        "render": [Function],
        "styledComponentId": "Menu-sc-1eizce1-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            複製
          </div>
        </StyledComponent>
      </MenuItem>
      <MenuItem
        active={false}
        onClick={[Function]}
      >
        <StyledComponent
          active={false}
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "MenuItem-mycuic-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  padding: 0 15px;
  min-width: 80px;
  cursor: pointer;
  box-sizing: border-box;
  color: ",
                  [Function],
                  ";
  min-height: ",
                  [Function],
                  ";

  * {
    transition: initial;
  }

  &:hover {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }

  /* Active */
  &:active {
    background-color: ",
                  [Function],
                  ";
    color: ",
                  [Function],
                  ";

    * {
      color: ",
                  [Function],
                  ";
    }
  }
  ",
                  [Function],
                  ";
",
                ],
              },
              "defaultProps": Object {
                "active": false,
              },
              "displayName": "MenuItem",
              "propTypes": Object {
                "active": [Function],
              },
              "render": [Function],
              "styledComponentId": "MenuItem-mycuic-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
        >
          <div
            className="c1"
            onClick={[Function]}
          >
            刪除
          </div>
        </StyledComponent>
      </MenuItem>
    </div>
  </StyledComponent>
</Menu>
`;
